--- a/cs/mail/chrome/messenger/messenger.properties
+++ b/cs/mail/chrome/messenger/messenger.properties
@@ -140,7 +140,7 @@ serverType-pop3=Poštovní server (POP)
 serverType-imap=Poštovní server (IMAP)
 serverType-none=Místní uložení e-mailu
 # LOCALIZATION NOTE(serverType-movemail): DONT_TRANSLATE
-serverType-movemail=Účet Movemail
+serverType-movemail=Účet movemail
 
 sizeColumnTooltip=Klepnutím seřadíte podle velikosti
 sizeColumnHeader=Velikost
