--- a/cs/mail/chrome/messenger/search.properties
+++ b/cs/mail/chrome/messenger/search.properties
@@ -10,17 +10,17 @@
 
 # filter stuff
 
-searchingMessage=Searching…
-searchSuccessMessage=1 match found
-searchSuccessMessages=%S matches found
-searchFailureMessage=No matches found
-labelForStopButton=Stop
-labelForSearchButton=Search
-labelForStopButton.accesskey=S
-labelForSearchButton.accesskey=S
+searchingMessage=Hledání…
+searchSuccessMessage=Nalezen 1 výskyt
+searchSuccessMessages=Nalezeno %S výskyty(ů)
+searchFailureMessage=Nic nenalezeno
+labelForStopButton=Zastavit
+labelForSearchButton=Hledat
+labelForStopButton.accesskey=Z
+labelForSearchButton.accesskey=H
 
-moreButtonTooltipText=Add a new rule
-lessButtonTooltipText=Remove this rule
+moreButtonTooltipText=Přidat pravidlo
+lessButtonTooltipText=Odebrat pravidlo
 
 # LOCALIZATION NOTE (glodaSearchTabTitle): The title to use for global database
 #  search tabs.  Include "%S" where you want the search string to be inserted.
