--- a/cs/mail/chrome/mozldap/ldap.properties
+++ b/cs/mail/chrome/mozldap/ldap.properties
@@ -292,4 +292,4 @@ authPromptText=Zadejte prosím své heslo pro %1$S.
 
 ## @name REFERRAL_LIMIT_EXCEEDED
 ## @loc none
-97=Překročen limit hopů pro odkazy
+97=Překročen limit skoků pro odkazy
