--- a/pl/mail/chrome/messenger/localMsgs.properties
+++ b/pl/mail/chrome/messenger/localMsgs.properties
@@ -39,7 +39,6 @@
 # ***** END LICENSE BLOCK *****
 
 -321=Za mało miejsca na dysku, aby pobrać nowe wiadomości. Spróbuj usunąć starą pocztę, opróżniając Kosz, a następnie uporządkuj foldery poczty i spróbuj jeszcze raz pobrać nowe wiadomości.
--1000=Za mało pamięci dla aplikacji.
 4000=Tworzenie pliku podsumowania dla %S…
 4001=Zakończono
 4002=Pobieranie wiadomości %S z %S…
@@ -58,54 +57,29 @@
 4016=Polecenie DELE nie powiodło się. Błąd oznaczania wiadomości jako usuniętej.
 4017=Wprowadź hasło użytkownika %1$s na serwerze %2$s:
 4018=Wprowadź nowe hasło użytkownika %.100s na serwerze %.100s:
-4019=Brak odpowiedzi
 4020=Wprowadź hasło:
-4023=W Koszu był już folder o nazwie "%s". Folder, który właśnie został usunięty, znajduje się w Koszu pod nazwą "%s".
 4024=Polecenie STAT nie powiodło się. Błąd pobierania numeru i rozmiarów wiadomości.
 4025=Odpowiedź serwera poczty %S:
-4026=Usuwanie %S z %S wiadomości
 4027=Kopiowanie %S z %S wiadomości do %S
 4028=Przenoszenie %S z %S wiadomości do %S
 4030=Serwer pocztowy nie obsługuje bezpiecznego uwierzytelniania.
-4032=Plik poczty (%S) jest zablokowany.
 4033=Otworzenie pliku poczty (%S) było niemożliwe.
 4034=Utworzenie pliku blokującego %S było niemożliwe. Dostęp do poczty Movemail wymaga możliwości tworzenia plików blokujących w systemowym katalogu poczty. W przypadku większości systemów wystarczy ustawić prawa dostępu do systemowego katalogu poczty na 01777.
 4035=Usunięcie pliku blokującego %S było niemożliwe.
 4036=Skrócenie pliku poczty %S było niemożliwe.
 4037=Odnalezienie pliku poczty było niemożliwe.
-
-## @name POP3_TMP_DOWNLOAD_FAILED
-## @loc None
 4038=Wystąpił błąd podczas pobierania wiadomości: \nOd: %S\n Temat: %S\n Ta wiadomość może zawierać wirusa lub na dysku jest niewystarczająca ilość miejsca. Pominąć tę wiadomość?
 
-# Status - the server doesn't support UIDL...
-## @name POP3_SERVER_DOES_NOT_SUPPORT_UIDL_ETC
-## @loc None
-# Place %S in your translation where the name of the server should appear.
-# Do not translate "UIDL"
+# Place %S in your translation where the name of the server should appear, do not translate "UIDL"
 4040=Serwer poczty przychodzącej POP3 (%S) nie obsługuje funkcji UIDL ani XTND XLST, które są wymagane do implementacji opcji: "Pozostaw kopię wiadomości na serwerze" oraz "Maksymalny rozmiar pobieranej wiadomości". Aby pobrać wiadomości, należy te opcje wyłączyć w kartach "Ustawienia serwera" oraz "Miejsce na dysku", znajdujących się w oknie "Konfiguracja kont".
 
-# Status - the server doesn't support the top command
-## @name POP3_SERVER_DOES_NOT_SUPPORT_THE_TOP_COMMAND
-## @loc None
-# Do not translate "%S". Place %S in your translation where the name of the server should appear.
-# Do not translate "TOP"
+# Place %S in your translation where the name of the server should appear, do not translate "TOP"
 4041=Serwer poczty przychodzącej POP3 (%S) nie obsługuje komendy TOP, która jest wymagana do implementacji opcji "Maksymalny rozmiar pobieranej wiadomości" ani "Pobierz tylko nagłówki". Wszystkie wiadomości, niezależnie od ich rozmiaru, zostaną pobrane, ponieważ sprawdzanie rozmiaru wiadomości zostało wyłączone.
 
 # secure authentication failed and unsure why
-## @name CANNOT_PROCESS_APOP_AUTH
-## @loc None
 4042=Serwer pocztowy nie obsługuje bezpiecznego uwierzytelniania lub zostało podane nieprawidłowe hasło. Sprawdź hasło lub wyłącz bezpieczne uwierzytelnianie w konfiguracji konta dla tego serwera poczty.\n
 
-## @name NS_ERROR_COULD_NOT_CONNECT_VIA_TLS
-## @loc None
 4043=Nie można ustanowić połączenia TLS z serwerem POP. Serwer może być chwilowo nieczynny lub jest nieprawidłowo skonfigurowany. Należy upewnić się, czy ustawienia serwera w oknie "Konfiguracja kont" są poprawne i spróbować ponownie.
-
-## @name POP3_MOVE_FOLDER_TO_TRASH
 4044 = Czy na pewno usunąć folder '%S'?
-
-## @name POP3_DELETE_FOLDER_DIALOG_TITLE
 4045 = Usuń folder
-
-## @name POP3_DELETE_FOLDER_BUTTON_LABEL
 4046 = &Usuń folder
