--- a/fr/mail/chrome/messenger/messenger.properties
+++ b/fr/mail/chrome/messenger/messenger.properties
@@ -211,7 +211,7 @@ groupFlagged=Suivis
 
 # defaults descriptions for tag prefs listed in mailnews.js
 # (we keep the .labels. names for backwards compatibility)
-mailnews.tags.remove=Enlever toutes les étiquettes
+mailnews.tags.remove=Supprimer toutes les étiquettes
 mailnews.labels.description.1=Important
 mailnews.labels.description.2=Travail
 mailnews.labels.description.3=Personnel
@@ -467,7 +467,7 @@ growlNotification=Nouveau courrier électronique
 emptyJunkTitle=Confirmation
 emptyJunkMessage=Voulez-vous vraiment supprimer définitivement tous les messages et sous-dossiers du dossier « Indésirables » ?
 emptyJunkDontAsk=Ne plus demander à l'avenir.
-emptyTrashTitle=Confirmer
+emptyTrashTitle=Confirmation
 emptyTrashMessage=Voulez-vous vraiment supprimer définitivement tous les messages et sous-dossiers de la corbeille ?
 emptyTrashDontAsk=Ne plus demander à l'avenir.
 
@@ -507,3 +507,11 @@ glodaSearch_results_why_contact=Contact
 glodaSearch_results_why_subject=Sujet
 glodaSearch_results_why_body=Corps du message
 glodaSearch_results_why_attachment=Pièce jointe
+
+mailServerLoginFailedTitle=Identification échouée
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=L'identification sur le serveur %S a échoué.
+mailServerLoginFailedRetryButton=&Réessayer
+mailServerLoginFailedEnterNewPasswordButton=&Saisir un nouveau mot de passe
