--- a/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -336,7 +336,15 @@ renameAttachmentMessage=Neuer Name des Anhangs:
 ## LOCALIZATION NOTE (mail.compose.attachment_reminder_keywords): comma separated
 ##   words that that should trigger an attachment reminder.
 mail.compose.attachment_reminder_keywords=Anhang,angehängt,.doc,.pdf,Wiedervorlage,Begleitschreiben
+
+addAttachmentButton=Anhang hinzufügen…
+addAttachmentButton.accessskey=A
+remindLaterButton=Mich später erinnern
+remindLaterButton.accessskey=M
+
 attachmentReminderTitle=Anhang-Erinnerung
 attachmentReminderMsg=Haben Sie vergessen einen Anhang anzufügen?
+attachmentReminderKeywordsMsg=Schlüsselwort der Anhang-Erinnerung gefunden: ;Schlüsselwörter der Anhang-Erinnerung gefunden: 
+attachmentReminderOptionsMsg=Schlüsselwörter der Anhang-Erinnerung können in den Einstellungen festgelegt werden
 attachmentReminderYesIForgot=Ja, habe ich!
 attachmentReminderFalseAlarm=Nein, jetzt senden
