--- a/de/mail/chrome/messenger/localMsgs.properties
+++ b/de/mail/chrome/messenger/localMsgs.properties
@@ -2,6 +2,18 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Geben Sie Ihr Passwort ein
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Geben Sie Ihr Passwort für %1$S auf %2$S ein:
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Geben Sie ein neues Passwort für Benutzer %1$S auf %2$S ein:
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Zu wenig Speicherplatz vorhanden, um neue Nachrichten herunterzuladen. Versuchen Sie, alte Nachrichten zu löschen, den Papierkorb zu leeren, komprimieren Sie Ihre Nachrichten-Ordner, und versuchen Sie es dann nochmals.
@@ -94,22 +106,6 @@
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=Das DELE-Kommando ist fehlgeschlagen. Nachricht konnte nicht als gelöscht markiert werden.
-
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Bitte geben Sie Ihr Passwort ein für: \n\n%1$s auf %2$s
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Bitte geben Sie das korrekte Passwort ein für: \n\n%.100s auf %.100s
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Mail-Server-Passwort benötigt
 
 # Status - stat failed
 ## @name POP3_STAT
