--- a/sv-SE/mail/chrome/messenger/localMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/localMsgs.properties
@@ -39,6 +39,18 @@
 # The following are used by the local mail code to display progress/status/error messages
 #
 
+pop3EnterPasswordPromptTitle=Ange ditt lösenord
+
+# LOCALIZATION NOTE(pop3EnterPasswordPrompt): Do not translate the words "%1$S"
+# and "%2$S" below. Place the word %1$S where the user name should appear, and
+# %2$S where the host name should appear.
+pop3EnterPasswordPrompt=Ange lösenordet för %1$S på %2$S:
+
+# LOCALIZATION NOTE(pop3PreviouslyEnteredPasswordIsInvalidPrompt): Do not
+# translate the words "%1$S" and "%2$S" below. Place the word %1$S where the
+# user name should appear, and %2$S where the host name should appear.
+pop3PreviouslyEnteredPasswordIsInvalidPrompt=Ange ett nytt lösenord för användaren %1$S på %2$S:
+
 ## @name MK_POP3_OUT_OF_DISK_SPACE
 ## @loc None
 -321=Det finns inte utrymme till att hämta nya meddelanden. Försök att ta bort lite gamla meddelanden, töm papperskorgen och komprimera dina meddelandemappar, och försök igen.
@@ -131,30 +143,6 @@
 ## @loc None
 # LOCALIZATION NOTE(4016): Do not translate the word "POP3" below.
 4016=Kommandot DELE kunde inte utföras. Kan inte märka meddelandet som borttaget.
-
-## @name POP3_ENTER_PASSWORD_PROMPT
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%1$s@%2$s" below.
-# Place the word "%1$s" and "%2$s" where email account name should appear (i.e. john.smith@example.org)
-4017=Ange lösenordet för %1$s på %2$s:
-
-## @name POP3_PREVIOUSLY_ENTERED_PASSWORD_IS_INVALID_ETC
-## @loc None
-# LOCALIZATION NOTE(4016): Do not translate the word "%s" below. It will receive the message returned by the server.
-# Do not translate "%.100s" and "%.100s". It will receive the email account name.
-4018=Ange ett nytt lösenord för användare %.100s på %.100s:
-
-## @name POP3_NO_ANSWER
-## @loc None
-4019=Inget svar
-
-## @name POP3_ENTER_PASSWORD_PROMPT_TITLE
-## @loc None
-4020=Ange ditt lösenord:
-
-## @name POP3_FOLDER_FOR_TRASH
-## @loc None
-4023=Papperskorgen innehöll redan en mapp med namnet %s. Mappen som du just tagit bort ligger nu i papperskorgen under namnet %s.
 
 # Status - stat failed
 ## @name POP3_STAT
