--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -512,3 +512,11 @@ glodaSearch_results_why_contact=Kontakt
 glodaSearch_results_why_subject=Ämne
 glodaSearch_results_why_body=Text
 glodaSearch_results_why_attachment=Bilaga
+
+mailServerLoginFailedTitle=Inloggningen misslyckades
+# LOCALIZATION NOTE (mailServerLoginFailedTitle): Insert "%S" in your
+# translation where you wish to display the hostname of the server to which
+# login failed.
+mailServerLoginFailed=Inloggningen till servern %S misslyckades.
+mailServerLoginFailedRetryButton=&Försök igen
+mailServerLoginFailedEnterNewPasswordButton=&Ange nytt lösenord
