--- a/sv-SE/mail/chrome/messenger/filter.properties
+++ b/sv-SE/mail/chrome/messenger/filter.properties
@@ -36,6 +36,7 @@ cannotHaveDuplicateFilterTitle=Namnet är redan upptaget
 cannotHaveDuplicateFilterMessage=Det finns redan en filterregel med detta namn. Ange ett annat namn.
 deleteFilterConfirmation=Är du säker på att du vill ta bort den markerade filterregeln?
 untitledFilterName=Namnlös
+matchAllFilterName=Matcha alla meddelanden
 filterListBackUpMsg=Filen som innehåller filterregler kan inte läsas. Detta innebär att inga filterregler kommer att fungera. Ett försök att skapa en ny rules.dat kommer att göras. Den gamla filen kommer att säkerhetskopieras till rulesbackup.dat i samma katalog.
 customHeaderOverflow=Du har överskridit gränsen på 50 egna sidhuvuden. Ta bort ett eller flera egna huvuden och försök igen.
 filterCustomHeaderOverflow=Dina filter har överskridit gränsen på 50 egna sidhuvuden. Redigera filen msgFilterRules.dat, som innehåller dina filter, till att använda färre egna huvuden.
@@ -81,3 +82,8 @@ filterAction15=meddelandetext hämtad från POP3-server
 filterAction16=kopierad till mapp
 filterAction17=satt etikett
 filterAction18=ignorerad undertråd
+# LOCALIZATION NOTE(filterAutoNameStr)
+# %1$S=Header or item to match, e.g. "From", "Tag", "Age in days", etc.
+# %2$S=Operator, e.g. "Contains", "is", "is greater than", etc.
+# %3$S=Value, e.g. "Steve Jobs", "Important", "42", etc.
+filterAutoNameStr=%1$S %2$S: %3$S
