--- a/fr/mail/chrome/messenger/filter.properties
+++ b/fr/mail/chrome/messenger/filter.properties
@@ -6,6 +6,7 @@ cannotHaveDuplicateFilterTitle=Nom de filtre existant
 cannotHaveDuplicateFilterMessage=Le nom du filtre que vous avez saisi est déjà utilisé. Veuillez en saisir un autre.
 deleteFilterConfirmation=Voulez-vous vraiment supprimer les(s) filtre(s) sélectionné(s) ?
 untitledFilterName=Filtre sans titre
+matchAllFilterName=Sélectionner tous les messages
 filterListBackUpMsg=Vos filtres ne fonctionnent pas car le fichier msgFilterRules.dat, qui contient les filtres, ne peut être lu. Un nouveau fichier msgFilterRules.dat sera créé et une sauvegarde de l'ancien, nommée rulesbackup.dat, sera créée dans le même répertoire.
 customHeaderOverflow=Vous avez dépassé la limite de 50 en-têtes personnalisés. Veuillez en supprimer un ou plusieurs et essayez à nouveau.
 filterCustomHeaderOverflow=Vos filtres ont dépassé la limite de 50 en-têtes personnalisés. Veuillez modifier le fichier msgFilterRules.dat, qui contient vos filtres, afin d'en utiliser moins.
@@ -51,3 +52,8 @@ filterAction15=corps du message récupéré du serveur POP3
 filterAction16=copié dans le dossier
 filterAction17=étiqueté
 filterAction18=discussion fille ignorée
+# LOCALIZATION NOTE(filterAutoNameStr)
+# %1$S=Header or item to match, e.g. "From", "Tag", "Age in days", etc.
+# %2$S=Operator, e.g. "Contains", "is", "is greater than", etc.
+# %3$S=Value, e.g. "Steve Jobs", "Important", "42", etc.
+filterAutoNameStr=%1$S %2$S : %3$S
