--- a/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/de/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -344,7 +344,10 @@ remindLaterButton.accessskey=M
 
 attachmentReminderTitle=Anhang-Erinnerung
 attachmentReminderMsg=Haben Sie vergessen einen Anhang anzufügen?
-attachmentReminderKeywordsMsg=Schlüsselwort der Anhang-Erinnerung gefunden: ;Schlüsselwörter der Anhang-Erinnerung gefunden: 
+# LOCALIZATION NOTE (attachmentReminderKeywordsMsgs): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 number of keywords
+attachmentReminderKeywordsMsgs=Schlüsselwort der Anhang-Erinnerung gefunden:;#1 Schlüsselwörter der Anhang-Erinnerung gefunden:
 attachmentReminderOptionsMsg=Schlüsselwörter der Anhang-Erinnerung können in den Einstellungen festgelegt werden
 attachmentReminderYesIForgot=Ja, habe ich!
 attachmentReminderFalseAlarm=Nein, jetzt senden
