--- a/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/pl/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -75,9 +75,6 @@
 12540=Kopiowanie nie powiodło się.
 12541=Ostrzeżenie! Za chwilę zostanie wysłana wiadomość o rozmiarze %d bajtów. Czy na pewno kontynuować wysyłanie wiadomości?
 
-12543=Podaj hasło dla %S:
-12544=Wprowadź hasło użytkownika %S na serwerze %S:
-12545=Łączenie się z serwerem…
 12550=Wysyłanie wiadomości…
 12551=Wysłanie wiadomości…
 12554=Wysłanie wiadomości do więcej niż jednego serwera grup dyskusyjnych jest niemożliwe.
@@ -118,9 +115,6 @@
 
 ## @name NS_ERROR_SMTP_PASSWORD_UNDEFINED
 12584=Wystąpił błąd podczas wysyłania wiadomości: nie udało się uzyskać hasła dla konta %S. Wiadomość nie została wysłana.
-
-## @name NS_SMTP_PASSWORD_PROMPT_TITLE
-12585=Wymagane hasło serwera SMTP
 
 ## @name NS_ERROR_SMTP_TEMP_SIZE_EXCEEDED
 12586=Rozmiar wysyłanej wiadomości przekracza tymczasowy limit rozmiaru wiadomości na serwerze. Wiadomość nie została wysłana; należy spróbować zmniejszyć jej rozmiar lub odczekać trochę i spróbować ponownie. Odpowiedź serwera: %s.
@@ -202,3 +196,7 @@ attachmentReminderOptionsMsg   = Przypomnienia o brakujących załącznikach mog
 attachmentReminderMsg          = Czy ta wiadomość nie powinna zawierać załączników?
 attachmentReminderYesIForgot   = Faktycznie!
 attachmentReminderFalseAlarm   = Nie, wyślij teraz
+
+smtpEnterPasswordPrompt             = Wprowadź hasło dla %S:
+smtpEnterPasswordPromptWithUsername = Wprowadź hasło dla użytkonika %2$S na serwerze %1$S:
+smtpEnterPasswordPromptTitle        = Wymagane hasło serwera SMTP
